# ia-trader

./: .env.example  .gitignore  config.yaml  dashboard.py  pyproject.toml  run_dashboard.bat  run_once.bat
scripts/: hello.py  run_backtest.py  smoke_binance.py  smoke_paper.py  smoke_signal.py  smoke_snapshot.py  smoke_storage.py  smoke_testnet_entry.py  testnet_dashboard.py
src/ai_trader/: __main__.py  config.py  logging_setup.py  scheduler.py
src/ai_trader/backtest/: data_loader.py  engine.py  llm_cache.py  report.py
src/ai_trader/brain/: claude_engine.py  prompts.py  risk_validator.py  signal.py
src/ai_trader/data/: binance_client.py  features.py  market_snapshot.py
src/ai_trader/execution/: binance_broker.py  paper_broker.py  risk_manager.py
src/ai_trader/notify/: messages.py  telegram_bot.py  telegram_control.py
src/ai_trader/storage/: db.py  models.py  repository.py
