[project]
name = "ai-trader"
version = "0.1.0"
description = "Crypto trading bot with Claude Sonnet as decision engine"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.4.0",
    "anthropic>=0.40.0",
    "python-telegram-bot>=21.6",
    "pandas>=2.2.0",
    "pandas-ta>=0.3.14b0",
    "numpy>=1.26.0",
    "pydantic>=2.9.0",
    "sqlalchemy>=2.0.36",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "streamlit>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
